@@ -90,6 +90,12 @@ struct ospf_lsa
   /* All of reference count, also lock to remove. */
   int lock;
 
+  /* Flags for the SPF calculation. */
+  int stat;
+  #define LSA_SPF_NOT_EXPLORED	-1
+  #define LSA_SPF_IN_SPFTREE	-2
+  /* If stat >= 0, stat is LSA position in candidates heap. */
+  
   /* References to this LSA in neighbor retransmission lists*/
   int retransmit_counter;
 
